# MLPlayground

./: .gitignore  README.md  benchmark_compute.py  gpt_train.ipynb  pyproject.toml  test_dataset.pickle  train_synth.py
model/: config.py  layers.py  models.py
transformer/: config.py  layers.py  models.py
